<resources>
    <string name="app_name">PO MyBus</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email / No Telepon</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_en" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings" translatable="false">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
	
	<string name="title_activity_main2" translatable="false">Main2Activity</string>
    
	<!-- Login -->
    <string name="action_sign_in">Login</string>
    <string name="belum_punya_akun">No account yet  ?</string>
    <string name="daftar">Register</string>
    <string name="dan">and</string>
    <string name="ketentuan">Condition</string>
    <string name="saya_setuju_dengan">I agree with</string>
    <string name="syarat">Term</string>
    <string name="navigasi">Navigation</string>
	<!-- Home -->
	<string name="status_aktif">Active</string>
	<string name="status_not_aktif">Not Active</string>
    
	<!-- Pengaturan -->
	<string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="sett">Setting</string>
    <string name="atur_aplikasi_navigasi">Manage Navigation App</string>
    <string name="getar_saat_terima_job">Vibrate upon receive job</string>
    <string name="custom_ringtone">Custom Ringtone</string>
    <string name="email">Email :</string>
    <string name="imei">IMEI :</string>
    <string name="google_maps">Google maps</string>
    <string name="getar_saat_sentuh">Vibrate on touch</string>
    <string name="device_id">Device ID :</string>
    <string name="version">Version :</string>
    <string name="bahasa">Language</string>
    <string name="informasi_perangkat">Device Information</string>
    <string name="toolbar_pengaturan">Setting</string>
	
</resources>
