<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSec"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="po.mybus.com.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
		android:layout_marginTop="10dp"
        android:src="@drawable/logo"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:orientation="vertical"
			android:paddingBottom="60dp"
			android:paddingTop="60dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dp"
				android:orientation="horizontal"
				android:paddingLeft="10dp"
				android:paddingRight="30dp">

				<ImageView
					android:id="@+id/img1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:scaleType="fitXY"
					android:src="@drawable/org" />

				<EditText
					android:id="@+id/email"
					android:layout_width="330dp"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@+id/img1"
					android:layout_toStartOf="@+id/img1"
					android:hint="@string/prompt_email"
					android:imeActionId="6"
					android:imeActionLabel="@string/action_sign_in_short"
					android:imeOptions="actionUnspecified"
					android:inputType="textEmailAddress"
					android:maxLines="1"
					android:scaleType="fitStart"
					android:singleLine="true"
					android:textSize="12sp" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:orientation="horizontal"
				android:paddingLeft="10dp"
				android:paddingRight="30dp">

				<ImageView
					android:id="@+id/img2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:scaleType="fitXY"
					android:src="@drawable/key" />

				<EditText
					android:id="@+id/password"
					android:layout_width="330dp"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_password"
					android:imeActionId="6"
					android:imeActionLabel="@string/action_sign_in_short"
					android:imeOptions="actionUnspecified"
					android:inputType="textPassword"
					android:maxLines="1"
					android:scaleType="fitStart"
					android:singleLine="true"
					android:textSize="12sp" />
			</LinearLayout>
		</LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
		android:layout_marginBottom="26dp"
		android:background="@color/colorButtA"
        android:text="@string/action_sign_in"
        android:textColor="@color/colorTextA"
        android:textStyle="bold" />
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
		android:layout_marginBottom="30dp"
        android:orientation="horizontal">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/belum_punya_akun"
			android:textSize="15sp"
			android:visibility="visible" />

		<TextView
			android:id="@+id/daftar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/daftar"
			android:textColor="#738ffa"
			android:textSize="15sp"
			android:textStyle="normal|italic"
			android:visibility="visible" />
	</LinearLayout>
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
		android:orientation="horizontal">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/saya_setuju_dengan"
			android:textSize="12sp"
			android:visibility="visible" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/syarat"
			android:textColor="#000000"
			android:textSize="12sp"
			android:textStyle="bold"
			android:visibility="visible" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/dan"
			android:textSize="12sp"
			android:visibility="visible" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ketentuan"
			android:textColor="#000000"
			android:textSize="12sp"
			android:textStyle="bold"
			android:visibility="visible" />
	</LinearLayout>
</LinearLayout>
